# airbridge

./: README.md  Taskfile.yaml  pyproject.toml
dags/consumer/: example_consumer.py
dags/publisher/: example_publisher.py
dags/team_a/: create_datasets_a.py  process_data_from_team_b.py
dags/team_b/: create_datasets_b.py  process_data_from_team_a.py
docker/: airflow-consumer.env  airflow-publisher.env  airflow-team-a.env  airflow-team-b.env  airflow.env
docker/airflow/: Dockerfile  docker-compose.overrides.yaml
docker/airflow/patches/airflow/datasets/: manager.py
docker/airflow/patches/airflow/listeners/spec/: dataset.py
docker/rabbitmq/: docker-compose.yaml
src/airbridge/: app.py  brokers.py  client.py  clients.py  config.py  hooks.py  listeners.py  model.py  operators.py  plugin.py
src/airbridge/clients/: airflow.py  rabbitmq.py
